Remove unnecessary options in build.gradle
I had forgotten to remove some options from the gradle template, which bit me now because of the upcoming command line input file option.